client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@import "@wordpress/base-styles/breakpoints";

.main.a4a-layout.sites-dashboard {
	background: inherit;
	padding-block-start: 0;

	@media (min-width: $break-large) {
		.sites-dashboard__layout:not(.preview-hidden) .sites-overview__page-title {
			font-size: 1.25rem;
			font-weight: 500;
		}
		.sites-dashboard__layout:not(.preview-hidden) .sites-overview__page-subtitle {
			display: none;
		}
	}

	@media (max-width: $break-large) {
		.sites-dashboard__layout {
			.sites-overview {
				overflow: hidden;

				.sites-overview__page-title-container {
					display: flex;
				}

				#sites-overview-add-sites-button {
					a.button.split-button__main {
						width: auto;
						height: auto;
						font-size: rem(12px);
						line-height: 24px;
						padding: 0 12px;
					}
				}

				.current-section button {
					margin-top: 12px;
					padding: 14px 8px;
				}

				a.sites-overview__issue-license-button {
					display: flex;
					font-size: rem(12px);
					justify-content: center;
					align-items: center;
					height: 28px;
					flex-grow: 0;
				}

				.split-button__main,
				button.split-button__toggle {
					width: 28px;
					height: 28px;
					line-height: 11px;
					font-size: rem(12px);
					padding: 0;
				}

				.split-button .button .gridicon {
					top: 0;
					margin-top: 0;
					width: 16px;
					height: 16px;
				}

				.sites-overview__tabs,
				.dataviews-filters__view-actions {
					border-bottom: 1px solid var(--studio-gray-5);
				}

				.sites-overview__content {
					padding: 0;
					margin: 0;
					margin-top: 16px;
				}
			}
		}

		.components-button.is-compact.has-icon:not(.has-text).dataviews-filters-button {
			min-width: 40px;
		}

		.components-button.is-compact.is-tertiary {
			margin-right: 8px;
		}

		.dataviews-filters__view-actions {
			padding: 8px;

			.components-input-control {
				flex-grow: 1;
			}

			.components-flex.components-h-stack {
				flex: 6;
			}

			.components-button.is-compact.has-icon {
				flex: 1;
				margin-left: -12px;
			}
		}

		.sites-overview__stats-trend,
		.sites-overview__column-action-button,
		.sites-overview__row-status,
		.toggle-activate-monitoring__toggle-button,
		.sites-dataviews__favorite-btn-wrapper,
		.sites-overview__boost-score {
			display: none;
		}

		td:nth-child(n+3):nth-child(-n+9) {
			display: none;
		}

		tr td:first-child {
			padding-left: 8px;
		}

		tr td:last-child {
			padding-right: 8px;
		}

		.dataviews-view-table-wrapper {
			table {
				width: 100%;
				max-width: 100vw;
			}

			th[data-field-id="stats"],
			th[data-field-id="boost"],
			th[data-field-id="backup"],
			th[data-field-id="monitor"],
			th[data-field-id="scan"],
			th[data-field-id="plugins"],
			th[data-field-id="favorite"] {
				display: none;
			}
		}
	}

	@media (max-width: $break-wide) {
		.sites-dashboard__layout:not(.preview-hidden) {
			flex-direction: column;
			gap: 0;

			.sites-overview__container {
				min-height: 0;
				overflow: hidden;
			}

			.sites-overview__content {
				display: none;
			}

			.sites-overview {
				width: unset;
			}
		}
	}

	@media (min-width: $break-wide) {
		.sites-dashboard__layout:not(.preview-hidden) {

			.sites-overview {
				padding: 48px 24px 32px;
				overflow-y: hidden;
			}

			.sites-overview__content {
				padding: 0;
			}

			.sites-overview__issue-license-button-short-caption {
				height: 28px;
				width: auto;
				line-height: 11px;
				font-size: rem(12px);
			}

			.sites-overview__page-subtitle {
				display: none;
			}

			.sites-overview__tabs,
			.dataviews-filters__view-actions {
				border-bottom: 1px solid var(--studio-gray-5);
			}

			.dataviews-filters__view-actions {
				padding: 16px 24px;
				margin: 0;
				display: flex;

				.components-h-stack {
					width: unset;
				}

				.components-h-stack,
				.components-button {
					flex-grow: 1;
				}

			}

			.sites-overview__tabs {
				padding: 0 24px;
			}

			.split-button__main,
			.split-button__toggle {
				height: 28px;
				line-height: 11px;
				font-size: rem(12px);
			}

			.split-button .button .gridicon {
				top: 0;
				width: 16px;
				height: 16px;
			}

			.sites-overview__page-title {
				font-size: rem(20px);
				font-weight: 500;
			}

			.sites-overview__issue-license-button {
				display: flex;
				font-size: rem(12px);
				justify-content: center;
				align-items: center;
				height: 28px;
			}

			ul.dataviews-view-list {
				list-style: none;
				margin: 0;
				padding: 0;

				li {
					padding: 16px 24px;
					border-bottom: 1px solid var(--studio-gray-5);
				}

				.dataviews-view-list__fields {
					display: flex;
					justify-content: space-between;
				}

				.components-h-stack,
				.dataviews-view-list__item {
					width: 100%;
				}

				.sites-overview__stats-trend,
				.sites-overview__column-action-button,
				.sites-overview__row-status,
				.toggle-activate-monitoring__toggle-button,
				.sites-dataviews__favorite-btn-wrapper,
				.sites-overview__boost-score {
					display: none;
				}

				.site-actions__actions-large-screen {
					display: block;
				}

			}
		}
	}

	.sites-overview__content-wrapper {
		max-width: none;
	}

	.sites-dashboard__layout {
		display: flex;
		flex-direction: row;
		flex-wrap: nowrap;
		gap: 16px;
		max-height: calc(100vh - 32px);
		min-height: calc(100vh - 32px);

		.activity-card-list .activity-card .activity-card__time {
			background: none;
		}

		.sites-overview__add-site-issue-license-buttons {
			display: flex;
			grid-gap: 8px;

			&.is-with-split-button {
				flex-direction: row;

				> a {
					flex-grow: 1;
				}

				.split-button {
					display: flex;
				}

				.split-button__main {
					flex-grow: 1;
				}

				@media (max-width: $break-small) {
					> a {
						flex-grow: 0;
					}
				}
			}
		}

		.sites-overview__add-new-site {
			white-space: nowrap;
		}

		.dataviews-wrapper {
			.components-button:focus:not(:disabled) {
				box-shadow: 0 0 0 2px var(--color-primary-light);
			}
		}

		.a4a-layout__top-wrapper,
		.a4a-layout__body {
			> * {
				padding-inline: 0;

				@include breakpoint-deprecated(">660px") {
					max-width: none;
				}
			}
		}

		.a4a-layout__container {
			width: 100%;
		}

		.sites-overview {
			width: 400px;
			flex-shrink: 0;
			overflow-x: auto;
			overflow-y: hidden;
			transition: all 0.2s;
			background: var(--studio-white);
			border-radius: 8px; /* stylelint-disable-line scales/radii */

			.site-set-favorite__favorite-icon {
				position: relative;
			}

			.sites-overview__content {
				margin-top: 16px;
			}
		}

		@media only screen and (min-width: $break-large) {
			.sites-overview {
				padding: 24px 18px;
			}
		}


		.sites-overview__container {
			min-height: calc(100vh - 90px);
		}

		.sites-overview__page-title {
			font-size: rem(24px);
		}

		.site-preview__pane {
			flex-grow: 1;
			width: auto;
			transition: flex-grow 0.2s;
			background: var(--studio-white);
			overflow: hidden;
			border-radius: 8px; /* stylelint-disable-line scales/radii */
		}

		&.preview-hidden {
			.sites-overview {
				flex-grow: 1;
				transition: flex-grow 0.2s;
			}

			.site-preview__pane {
				max-width: 0;
				padding: 0;
			}

			@media only screen and (min-width: $break-large) {
				.sites-overview {
					padding: 48px 64px 0;
					overflow-x: auto;
				}
			}
		}

		@media (max-width: 660px) {
			.sites-overview__page-heading {
				display: none;
			}
		}
	}
}

